# mish_buxef

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml
api/: index.py
app/: __init__.py  api.py  api_web.py  config.py  domain.py  main.py  persistence.py  repositories.py  requirements.txt  services.py
app/templates/: index.html  login.html  notificaciones.html  registro.html
tests/: conftest.py  test_main.py  test_notificaciones.py
